--- a/submit/prj3-sol/package.json
+++ b/submit/prj3-sol/package.json
@@ -12,6 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.2.0"
+    "mocha": "^8.2.0",
+    "nodemon": "^2.0.6"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "cs544-ss": "file:../../../../cs544/lib/cs544-ss",
+    "express": "^4.17.1",
+    "mongo": "^0.1.0"
   }
 }
